Bug 11425 - Failure joining a Huawei storage (GSSAPI null 'checksum')
Summary: Failure joining a Huawei storage (GSSAPI null 'checksum')
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.2.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-03 22:26 UTC by Andrew Bartlett
Modified: 2016-07-29 03:27 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2015-08-03 22:26:19 UTC
We need to backport https://github.com/heimdal/heimdal/commit/0a5de96d72cdea9e465412d7dba1e5d13e53dc09 into Samba's heimdal snapshot so that a Huawei Unified Storage System S5500 V3 can join a Samba AD DC.
Comment 1 Andrew Bartlett 2016-07-29 03:27:05 UTC
Fixed in Samba 4.4 with ddee603b5e5325129ffacbfb18a260a3d807a6e1